--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
 
-  <title>Your System Title | Your System Name</title>
+  <title>Ridwan B Design Phase</title>
   <link rel="icon" href="path/to/your/favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -70,15 +70,17 @@
   <div class="container-fluid overflow-auto main-page">
     <div class="row p-5">
       <div id="content">
-        <h2 class="mt-n2">Sweater Weather Design System </h2>
+        <h2 class="mt-n2">Ridwan B Design System </h2>
         <h4>About</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia sunt accusamus corporis aliquid corrupti dolores quaerat voluptatibus perspiciatis veniam, esse quisquam nesciunt reiciendis nobis beatae libero, quia cupiditate maxime deleniti facere. Reprehenderit odio harum rerum in cupiditate praesentium nisi laborum. Ea iure sequi architecto, explicabo assumenda nam soluta quod hic?</p>
+        <p>This website is my redesign of my design system for my portfolio website. 
+          My first design lacked originality and honesty. Here I designed this system to make it simple, effective, original and modern. </p>
         <h4>Foundation</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia sunt accusamus corporis aliquid corrupti dolores quaerat voluptatibus perspiciatis veniam, esse quisquam nesciunt reiciendis nobis beatae libero, quia cupiditate maxime deleniti facere. Reprehenderit odio harum rerum in cupiditate praesentium nisi laborum. Ea iure sequi architecto, explicabo assumenda nam soluta quod hic?</p>
+        <p>The foundation includes three pages which are color palette, typography and logos.</p>
         <h4>Components</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia sunt accusamus corporis aliquid corrupti dolores quaerat voluptatibus perspiciatis veniam, esse quisquam nesciunt reiciendis nobis beatae libero, quia cupiditate maxime deleniti facere. Reprehenderit odio harum rerum in cupiditate praesentium nisi laborum. Ea iure sequi architecto, explicabo assumenda nam soluta quod hic?</p>
+        <p>The component has 3 components which are the navbar, footer and card.</p>
         <h4>Page Pattern</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia sunt accusamus corporis aliquid corrupti dolores quaerat voluptatibus perspiciatis veniam, esse quisquam nesciunt reiciendis nobis beatae libero, quia cupiditate maxime deleniti facere. Reprehenderit odio harum rerum in cupiditate praesentium nisi laborum. Ea iure sequi architecto, explicabo assumenda nam soluta quod hic?</p>
+        <p>The page pattern shows the 3 different designs which are desktop, phone and tablet. This also consists of the grids. 
+          Here, I attempted to code my figma design with my new color palette. The grids are from my figma design with my old colors. </p>
         
       </div>
     </div>
