--- a/foundation/type.html
+++ b/foundation/type.html
@@ -164,7 +164,7 @@
       </div>
       <div class="row">
           <div class="col-12 col-lg-6">
-              <p><em>Emphasized Text</em></p>
+              <p><em>Bold/Emphasized Text</em></p>
               
           </div>
           <div class="col-lg-5 offset-lg-1 specs">
