--- a/foundation/logo.html
+++ b/foundation/logo.html
@@ -92,8 +92,8 @@
           <div class="card">
             <img src="../logo imgs/logo1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Logo title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, incidunt!</p>
+              <h5 class="card-title">Main</h5>
+              <p class="card-text">This is the main logo.</p>
             </div>
           </div>
         </div>
@@ -101,8 +101,8 @@
           <div class="card">
             <img src="../logo imgs/logobw.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Logo title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, incidunt!</p>
+              <h5 class="card-title">Black White</h5>
+              <p class="card-text">This is the black and white logo</p>
             </div>
           </div>
         </div>
@@ -110,8 +110,8 @@
           <div class="card">
             <img src="../logo imgs/logoinv.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Logo title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, incidunt!</p>
+              <h5 class="card-title">Inverse</h5>
+              <p class="card-text">This is the inversed logo.</p>
             </div>
           </div>
         </div>
