--- a/patterns/page1-tablet.html
+++ b/patterns/page1-tablet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <title>Template: Bootstrap v5.3</title>
+    <title>Ridwan B Design Phase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,9 +82,7 @@
           <div class = "row p-5">
             <div id="content">
               <h2>Homepage</h2>
-              <p>See posted student examples. Make sure this works responsively. There are currently no columns in this section. (You will need to add those). </p>
-
-              <p>You can choose to use this pagination or not (see CSS to control the colors). </p>
+             
               <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
               
